--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^1.0.2",
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
+    "google-maps-react": "^1.0.19",
     "jsonwebtoken": "^7.3.0",
     "material-ui": "^0.17.1",
     "materialize": "^1.0.0",
@@ -23,6 +24,8 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-fontawesome": "^1.5.0",
+    "react-google-map": "^3.0.1",
+    "react-google-maps-loader": "^2.0.2",
     "react-materialize": "^0.18.1",
     "react-router": "^3.0.0",
     "react-tap-event-plugin": "^2.0.1",
