--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-materialize": "^0.18.1",
     "react-router": "^3.0.0",
     "react-tap-event-plugin": "^2.0.1",
+    "request": "^2.81.0",
     "validator": "^7.0.0"
   },
   "devDependencies": {
