--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-google-map": "^3.0.1",
     "react-google-maps-loader": "^2.0.2",
     "react-materialize": "^0.18.1",
+    "react-parallax": "^1.2.6",
     "react-router": "^3.0.0",
     "react-tap-event-plugin": "^2.0.1",
     "request": "^2.81.0",
